bugfix, math is not drawn on printer devices

--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -25,6 +25,7 @@
                 "runtimeExecutable": "${workspaceRoot}/node_modules/.bin/electron.cmd",
             },
             "console":"integratedTerminal",
+            "outputCapture": "std",
         }
     ]
 
