--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -35,10 +35,10 @@
         },
         {
         "name": "Electron: Renderer",
-        "type": "pwa-chrome",             //use the Chrome debugger that comes with VS Code
-        "request": "attach",
-        "port": 9223,                     //use debug port opened in Electron: Main configuration
-        "webRoot": "${workspaceFolder}",
+        "type": "node",             //use the Chrome debugger that comes with VS Code
+        "request": "launch",
+        //"port": 9223,                     //use debug port opened in Electron: Main configuration
+        //"webRoot": "${workspaceFolder}",
         "timeout": 60000
         }
     ],
